--- a/bc-express/package.json
+++ b/bc-express/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "pg": "^6.2.3",
+    "sequelize": "^3.30.4",
+    "sequelize-cli": "^2.7.0",
+    "uuid": "^3.0.1"
+  }
 }
