--- a/bc-express/package.json
+++ b/bc-express/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "express": "^4.15.3",
+    "nodemon": "^1.11.0",
     "pg": "^6.2.3",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
