--- a/bc-express/package.json
+++ b/bc-express/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "pg": "^6.2.3",
+    "rapidapi-connect": "0.0.4",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
     "uuid": "^3.0.1"
