--- a/bc-express/package.json
+++ b/bc-express/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
+    "crypto": "0.0.3",
     "express": "^4.15.3",
     "nodemon": "^1.11.0",
     "pg": "^6.2.3",
