--- a/bc-react/package.json
+++ b/bc-react/package.json
@@ -6,7 +6,9 @@
     "flux": "^3.1.2",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
+    "react-calendar-component": "^1.2.0",
     "react-dom": "^15.5.4",
+    "react-event-calendar": "^0.3.0",
     "react-image": "^1.0.1",
     "react-router-dom": "^4.1.1",
     "react-scripts": "^1.0.7"
