move package json and go with yarn all the way

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bc-express/app.js",
+    "heroku-postbuild": "cd bc-express/ && sequelize db:migrate && cd .. && cd bc-react/ && yarn install && yarn build"
   },
   "author": "",
   "license": "ISC",
