--- a/bc-react/package.json
+++ b/bc-react/package.json
@@ -20,14 +20,11 @@
     "react-scripts": "^1.0.7",
     "react-transition-group": "^1.1.1"
   },
-  "devDependencies": {
-    "react-scripts": "1.0.7"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "./node_modules/react-scripts/bin/react-scripts.js start",
+    "build": "./node_modules/react-scripts/bin/react-scripts.js build",
+    "test": "./node_modules/react-scripts/bin/react-scripts.js test --env=jsdom",
+    "eject": "./node_modules/react-scripts/bin/react-scripts.js eject"
   },
   "main": "index.js",
   "license": "MIT"
