--- a/bc-react/package.json
+++ b/bc-react/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-class": "^15.5.4",
     "flux": "^3.1.2",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-big-calendar": "^0.14.0",
     "react-bootstrap": "^0.31.0",
     "react-calendar-component": "^1.2.0",
+    "react-coverflow": "^0.2.3",
     "react-dom": "^15.5.4",
     "react-event-calendar": "^0.3.0",
     "react-image": "^1.0.1",
