--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+*.css
+
 # dependencies
 /bc-react/node_modules
 /bc-express/node_modules
