--- a/bc-express/package.json
+++ b/bc-express/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.3",
     "crypto": "0.0.3",
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "nodemon": "^1.11.0",
     "pg": "^6.2.3",
     "rapidapi-connect": "0.0.4",
