--- a/bc-react/package.json
+++ b/bc-react/package.json
@@ -27,11 +27,11 @@
     "react-transition-group": "^1.1.1"
   },
   "scripts": {
-    "start-js": "./node_modules/react-scripts/bin/react-scripts.js start",
+    "start-js": "node ./node_modules/react-scripts/bin/react-scripts.js start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && ./node_modules/react-scripts/bin/react-scripts.js build",
-    "test": "./node_modules/react-scripts/bin/react-scripts.js test --env=jsdom",
-    "eject": "./node_modules/react-scripts/bin/react-scripts.js eject",
+    "test": "node ./node_modules/react-scripts/bin/react-scripts.js test --env=jsdom",
+    "eject": "node ./node_modules/react-scripts/bin/react-scripts.js eject",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
   },
