Added an '/edit/user' route to allow users to update their profile. Also added out commented code and a link to using  for RESTful APIs as a suggestion for future imporvements

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ yarn-error.log*
 /bc-express/config/config.json
 node_modules
 bc-react/build/
+
+# Personal Ignore List
+package.json
+package-lock.json
+yarn.lock
+*.sublime-workspace
+*.sublime-project
+*.dump
