--- a/bc-react/package.json
+++ b/bc-react/package.json
@@ -23,6 +23,7 @@
     "react-modal": "^1.7.8",
     "react-router-dom": "^4.1.1",
     "react-scripts": "^1.0.7",
+    "react-toggle-display": "^2.2.0",
     "react-transition-group": "^1.1.1",
     "reactjs-coverflow": "^1.1.1"
   },
