--- a/bc-react/package.json
+++ b/bc-react/package.json
@@ -21,6 +21,7 @@
     "react-images-uploader": "^1.0.1",
     "react-infinite-calendar": "^2.3.1",
     "react-modal": "^1.7.8",
+    "react-moment": "^0.3.0",
     "react-router-dom": "^4.1.1",
     "react-scripts": "^1.0.7",
     "react-toggle-display": "^2.2.0",
