--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "moment": "^2.18.1",
+    "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
     "pg": "^6.2.3",
     "rapidapi-connect": "0.0.4",
